# night-walk

./: .gitignore  README.md  main.py  pyproject.toml
assets/tree/: tower.mtl
engine/: logger.py
engine/core/: __init__.py  notification.py  object.py  resource.py  resource_format_loader.py  resource_loader.py  rid.py
engine/core/os/: keyboard.py  mouse.py
engine/math/: __init__.py  geometry.py  utils.py
engine/math/datatypes/: __init__.py  aabb.py  basis.py  bvh.py  color.py  plane.py  projection.py  rect2.py  transform_2d.py  transform_3d.py  vector2.py  vector3.py  vector4.py
engine/resources/font/: font.py  font_file.py  font_variation.py
engine/resources/image/: enums.py  image.py
engine/resources/material/: base_material_3d.py  material.py  standard_material_3d.py
engine/resources/mesh/: array_mesh.py  mesh.py  multimesh.py  plane_mesh.py  primitive_mesh.py
engine/resources/physics/: capsule_shape_3d.py  plane_shape_3d.py
engine/resources/texture/: image_texture.py  texture_2d.py
engine/scene/main/: enviroment.py  input.py  input_event.py  node.py  node_script.py  process_mode.py  scene_tree.py  signal.py  timer.py  viewport.py  window.py
engine/scene/resources/: world_2d.py  world_3d.py
engine/scene/three_d/: __init__.py  camera_3d.py  collision_object_3d.py  collision_shape_3d.py  geometry_instance_3d.py  kinematic_collision_3d.py  mesh_instance_3d.py  (+6 more)
engine/ui/: __init__.py
game/autoload/: assets.py  settings.py
game/components/: camera_sway.py  flashlight_sway.py  head_bob.py  stamina_component.py
game/levels/: forest_level.py
(+111 files in other folders)
