[project]
name = "ygo-fm-clone"
version = "0.1.0"
description = "Add your description here"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=2.4.1",
    "openexr>=3.4.4",
    "pillow>=12.1.0",
    "pyopengl>=3.1.10",
    "pysdl2>=0.9.17",
    "pysdl2-dll>=2.32.0",
    "rich>=14.3.1",
    "ruff>=0.14.14",
]
